# biblioteca-jp-api

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 1fd0d069c367_create_books_model.py  24da900c5e19_create_books_model.py  825acd64a04e_create_books_model.py  c189300cb8b5_create_books_model.py
src/application/dtos/: books_dto.py
src/application/interfaces/: book_request_interface.py  books_respository_interface.py
src/application/interfaces/books/: create_books_interface.py
src/application/usecases/: books_usecase.py
src/application/usecases/books/: create_books.py  delete_books.py  show_books.py  update_books.py  view_books.py
src/domain/books/: books_entity.py
src/domain/books/dtos/: books_dto.py  books_dto_interface.py
src/domain/books/errors/: area_error.py  author_error.py  book_name_error.py  isbn_error.py  publishing_company_error.py  shelf_error.py
src/domain/books/interfaces/: books_dto_interface.py
src/domain/books/object_values/: area_value.py  author_value.py  book_name_value.py  co_author_value.py  included_at_value.py  isbn_value.py  publishing_company_value.py  shelf_value.py  updated_at_value.py
src/infrastructure/models/: __init__.py  books_model.py  model.py
src/infrastructure/repositories/: books_repository.py
src/infrastructure/services/: connect.py
src/interfaces/books/: create_book_controller.py
tests/: conftest.py
tests/src/domain/books/: test_book_entity.py
tests/src/domain/books/errors/: test_isbn_error.py
(+29 files in other folders)
