[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["jacksonsr45 <jackson.severino.rocha@escola.pr.gov.br>"]
readme = "README.md"
license = "MIT"

packages = [{include="src"}]

exclude = ["tests", ".vscode", "htmlcov"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.44"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
blue = "^0.9.1"
pytest = "^7.2.0"
mkdocs = "^1.4.2"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
